no hice nada del total del carro
Estoy estilando un poco

--- a/iniciando.html
+++ b/iniciando.html
@@ -14,7 +14,7 @@
     </header>
     <div class="miDiv">
       <div class="primer_tabla">
-    <table class="laTabla" border="1">
+    <table class="laTabla1" border="1">
       <!-- Encabezado de la tabla -->
       <thead>
         <tr>
@@ -48,6 +48,7 @@
   </div>
 
   <script src="armarTablaCarro.js"></script>
+  <script src="escucharInput.js"></script>
     <script src="clase.js"></script>
     <script src="elCarro.js"></script>
     
