TOTAL DEL CARRO
Lo pude poner en el DOM

--- a/iniciando.html
+++ b/iniciando.html
@@ -14,7 +14,7 @@
     </header>
     <div class="miDiv">
       <div class="primer_tabla">
-    <table class="laTabla1" border="1">
+    <table class="laTabla1">
       <!-- Encabezado de la tabla -->
       <thead>
         <tr>
@@ -44,6 +44,11 @@
       <!-- Cuerpo de la tabla -->
       <tbody id="cuerpo_Tabla_Carro"></tbody>
     </table>
+  </div>
+  <div class="el_Total" >
+    El total de tu compra es
+    <p class="columna_tabla" id="pongo_Total"></p>
+    
   </div>
   </div>
 
