--- a/iniciando.html
+++ b/iniciando.html
@@ -12,22 +12,23 @@
         <p class="heading-3">agoodshoop</p>
       </div>
     </header>
+    <main class="wrapper">
     <div class="miDiv">
       <div class="primer_tabla">
-    <table class="laTabla1">
-      <!-- Encabezado de la tabla -->
-      <thead>
-        <tr>
-          <th class="columna_tabla">Producto</th>
-          <th class="columna_tabla">Cantidad</th>
-          <th class="columna_tabla">Precio</th>
-          <th class="columna_tabla">Total</th>
-        </tr>
-      </thead>
+        <table class="laTabla1">
+          <!-- Encabezado de la tabla -->
+          <thead>
+            <tr>
+                <th class="columna_tabla">Producto</th>
+                <th class="columna_tabla">Cantidad</th>
+                 <th class="columna_tabla">Precio</th>
+                <th class="columna_tabla">Total</th>
+            </tr>
+          </thead>
 
-      <!-- Cuerpo de la tabla -->
-      <tbody id="cuerpoTabla"></tbody>
-    </table>
+          <!-- Cuerpo de la tabla -->
+          <tbody id="cuerpoTabla"></tbody>
+        </table>
      <!-- termina primer tabla-->
 
     </div>
@@ -59,6 +60,7 @@
     
     <script src = "principal.js"></script>
     </script>
+  </main>
   </body>
 </html>
 
