--- a/iniciando.html
+++ b/iniciando.html
@@ -37,7 +37,7 @@
               <th class="columna_tabla">Importe</th>
             </tr>
                 <!-- Cuerpo de la tabla del Carro-->
-        <tbody id="cuerpo_Tabla_Carro"></tbody>
+        <tbody id="cuerpo_Tabla_Carro" class="style_tabla1"></tbody>
       </table>
     
       <div class="el_Total" >
@@ -45,7 +45,7 @@
           <p class="columna_tabla" id="pongo_Total"></p>
     
       </div>
-</section>
+    </section>
  
 
   <script src="armarTablaCarro.js"></script>
