--- a/iniciando.html
+++ b/iniciando.html
@@ -40,10 +40,13 @@
         <tbody id="cuerpo_Tabla_Carro" class="style_tabla1"></tbody>
       </table>
     
-      <div class="el_Total" >
+      <div class="el_Total" id="carro_inicial">
           El total de tu compra es
           <p class="columna_tabla" id="pongo_Total"></p>
     
+      </div>
+      <div class="carro_vacio" id="carro_sin_nada">
+
       </div>
     </section>
  
