Puse aclaraciones para la correccion

--- a/iniciando.html
+++ b/iniciando.html
@@ -34,6 +34,7 @@
 
     <section class="segunda_tabla" id="carro_Total">
       <table class="tabla_del_carro" id="tabla2">
+        <!--Encabezado Tabla del carro-->
             <tr>
               <th class="columna_tabla">Articulos</th>
               <th class="columna_tabla">Importe</th>
@@ -45,7 +46,7 @@
       <div class="el_Total" id="carro_inicial">
         <hr>
           El total de tu compra es
-          <p class="columna_tabla" id="pongo_Total"></p>
+          <p class="total_del_carro" id="pongo_Total"></p>
     
       </div>
       <div class="carro_vacio" id="carro_sin_nada">
